force-app/main/default/objects/Tax_Invoice__c/Tax_Invoice__c.object-meta.xml
<CustomObject>
    <description>When fees are collected (transaction fees, profit sharing, Insurance premium collection, membership fees), a Tax invoice must be generated, stored and sent to the client.</description>
    <label>Tax Invoice</label>
    <nameField>
        <displayFormat>ICLINV-{00000000}</displayFormat>
        <label>Tax Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>