force-app/main/default/objects/Tax_Invoice__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Allocation</label>
    <referenceTo>Invoice_Allocation__c</referenceTo>
    <relationshipLabel>Tax Invoices</relationshipLabel>
    <relationshipName>Invoice_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>