force-app/main/default/objects/Tax_Invoice__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>IF(RecordType.Name == &apos;Funder&apos;, Allocation__r.Funder__r.BillingCity,
    IF(RecordType.Name == &apos;Funder Agent&apos;, Allocation__r.Funder__r.Agent__r.BillingCity,
        IF(RecordType.Name == &apos;Supplier&apos;, Invoice__r.Supplier_Buyer_Map__r.Supplier__r.BillingCity,
            IF(RecordType.Name == &apos;Map Agent&apos;, Invoice__r.Supplier_Buyer_Map__r.Supplier__r.Agent__r.BillingCity, &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>