force-app/main/default/objects/Tax_Invoice__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <formula>IF(RecordType.Name == &apos;Funder&apos;,  Allocation__r.Funder__r.Primary_Contact_Phone__c,
    IF(RecordType.Name == &apos;Funder Agent&apos;, Allocation__r.Funder__r.Agent__r.Primary_Contact_Phone__c,
        IF(RecordType.Name == &apos;Supplier&apos;, Invoice__r.Supplier_Buyer_Map__r.Supplier__r.Primary_Contact_Phone__c,
            IF(RecordType.Name == &apos;Map Agent&apos;, Invoice__r.Supplier_Buyer_Map__r.Supplier__r.Agent__r.Primary_Contact_Phone__c, &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Number</label>
    <type>Text</type>
</CustomField>