force-app/main/default/objects/Tax_Invoice__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>IF(RecordType.Name == &apos;Funder&apos;, Allocation__r.Funder__r.BillingCountry,
    IF(RecordType.Name == &apos;Funder Agent&apos;, Allocation__r.Funder__r.Agent__r.BillingCountry,
        IF(RecordType.Name == &apos;Supplier&apos;, Invoice__r.Supplier_Buyer_Map__r.Supplier__r.BillingCountry,
            IF(RecordType.Name == &apos;Map Agent&apos;, Invoice__r.Supplier_Buyer_Map__r.Supplier__r.Agent__r.BillingCountry, &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>