force-app/main/default/objects/Tax_Invoice__c/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <formula>IF(RecordType.Name == &apos;Funder&apos;, Allocation__r.Funder__r.BillingStreet,
    IF(RecordType.Name == &apos;Funder Agent&apos;, Allocation__r.Funder__r.Agent__r.BillingStreet,
        IF(RecordType.Name == &apos;Supplier&apos;, Invoice__r.Supplier_Buyer_Map__r.Supplier__r.BillingStreet,
            IF(RecordType.Name == &apos;Map Agent&apos;, Invoice__r.Supplier_Buyer_Map__r.Supplier__r.Agent__r.BillingStreet, &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Address</label>
    <type>Text</type>
</CustomField>