force-app/main/default/objects/Tax_Invoice__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>IF(RecordType.Name == &apos;Funder&apos;, Allocation__r.Funder__r.Name,
    IF(RecordType.Name == &apos;Funder Agent&apos;, Allocation__r.Funder__r.Agent__r.Name,
        IF(RecordType.Name == &apos;Supplier&apos;, Invoice__r.Supplier_Buyer_Map__r.Supplier__r.Name,
            IF(RecordType.Name == &apos;Map Agent&apos;, Invoice__r.Supplier_Buyer_Map__r.Supplier__r.Agent__r.Name, &apos;EMPTY&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>