force-app/main/default/objects/Tax_Invoice__c/fields/Date_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Service__c</fullName>
    <formula>IF(ISPICKVAL(Transaction_Type__c, &apos;Funded&apos;),
    Invoice__r.advance_send_to_supplier_date__c,
    Invoice__r.Actual_Repayment_Received_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Service</label>
    <type>Date</type>
</CustomField>