force-app/main/default/objects/Tax_Invoice__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>