force-app/main/default/objects/Tax_Invoice__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>invoice_finance_deal__c</referenceTo>
    <relationshipLabel>Tax Invoices</relationshipLabel>
    <relationshipName>Tax_Invoices1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>