force-app/main/default/objects/Tax_Invoice__c/fields/Invoice_Amount_SGD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_SGD_Equiv__c</fullName>
    <formula>IF(Currency__c == &apos;SGD&apos;, Invoice_Amount__c, ROUND(Invoice_Amount__c * Exchange_Rate__c, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amount SGD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>