force-app/main/default/objects/Tax_Invoice__c/fields/Invoice_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reference_Number__c</fullName>
    <description>Unique identifier for the tax invoice</description>
    <label>Invoice Reference Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>