force-app/main/default/objects/Tax_Invoice__c/fields/No_Tax_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>No_Tax_Total_Amount__c</fullName>
    <label>No Tax Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>