force-app/main/default/objects/Tax_Invoice__c/fields/No_Tax_Total_Amount_SGD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>No_Tax_Total_Amount_SGD_Equiv__c</fullName>
    <formula>IF(Currency__c == &apos;SGD&apos;, No_Tax_Total_Amount__c, ROUND(No_Tax_Total_Amount__c * Exchange_Rate__c, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Tax Total Amount SGD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>