force-app/main/default/objects/Tax_Invoice__c/fields/Original_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice_Date__c</fullName>
    <description>Refers to the invoice date that was assumed to be paid exactly on due date</description>
    <label>Original Invoice Date</label>
    <type>Date</type>
</CustomField>