force-app/main/default/objects/Tax_Invoice__c/fields/Original_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice_Number__c</fullName>
    <description>Refers to the invoice number of the repayment assumed to be paid on time</description>
    <label>Original Invoice Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>