force-app/main/default/objects/Tax_Invoice__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <formula>IF( RecordType.Name == &apos;Funder&apos;, Allocation__r.Funder__r.BillingPostalCode,
    IF( RecordType.Name == &apos;Funder Agent&apos;, Allocation__r.Funder__r.Agent__r.BillingPostalCode,
        IF( RecordType.Name == &apos;Supplier&apos;, Invoice__r.Supplier_Buyer_Map__r.Supplier__r.BillingPostalCode,
            IF( RecordType.Name == &apos;Map Agent&apos;, Invoice__r.Supplier_Buyer_Map__r.Supplier__r.Agent__r.BillingPostalCode, &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code</label>
    <type>Text</type>
</CustomField>