force-app/main/default/objects/Tax_Invoice__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>IF( RecordType.Name == &apos;Funder&apos;, Allocation__r.Funder__r.BillingState,
    IF( RecordType.Name == &apos;Funder Agent&apos;, Allocation__r.Funder__r.Agent__r.BillingState,
        IF( RecordType.Name == &apos;Supplier&apos;, Invoice__r.Supplier_Buyer_Map__r.Supplier__r.BillingState,
            IF( RecordType.Name == &apos;Map Agent&apos;, Invoice__r.Supplier_Buyer_Map__r.Supplier__r.Agent__r.BillingState, &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>