force-app/main/default/objects/Tax_Invoice__c/fields/Tax_Rate_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_Percentage__c</fullName>
    <label>Tax Rate Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>