force-app/main/default/objects/Tax_Invoice__c/fields/Total_Amount_SGD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_SGD_Equiv__c</fullName>
    <formula>IF(Currency__c == &apos;SGD&apos;, Total_Amount__c, ROUND(Invoice_Amount_SGD_Equiv__c + GST_Amount_SGD_Equiv__c, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount SGD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>