force-app/main/default/objects/Tax_Invoice__c/recordTypes/Funder.recordType-meta.xml
<RecordType>
    <fullName>Funder</fullName>
    <active>true</active>
    <label>Funder</label>
</RecordType>