force-app/main/default/objects/Tax_Invoice__c/recordTypes/Funder_Agent.recordType-meta.xml
<RecordType>
    <fullName>Funder_Agent</fullName>
    <active>true</active>
    <label>Funder Agent</label>
</RecordType>