force-app/main/default/objects/Tax_Invoice__c/recordTypes/Map_Agent.recordType-meta.xml
<RecordType>
    <fullName>Map_Agent</fullName>
    <active>true</active>
    <label>Map Agent</label>
</RecordType>